Minor changes and new pages for asteroids

--- a/pages/cybele.html
+++ b/pages/cybele.html
@@ -49,7 +49,7 @@ link: cybele
                 </p>
                 <h3 class="paragraphsubheader" id="Structure">Structure</h3>
                 <p class="paragraph">
-                    Cybele is an P-type asteroid, consisting of water ice, as well as organic-rich silicates, carbon and anhydrous silicates.
+                    Cybele is a P-type asteroid, consisting of water ice, as well as organic-rich silicates, carbon and anhydrous silicates.
                     P-type asteroids are typical for the outer reaches of the asteroid belt and the <a href="jupiter.html">Jupiter</a> <a href="trojan.html">trojans</a>, and resemble distant minor planets.
                 </p>
                 <p class="paragraph">
