--- a/pages/psyche.html
+++ b/pages/psyche.html
@@ -12,7 +12,10 @@ link: psyche
                     </div>
                     <p class="paragraph">
                         16 Psyche is an <a href="asteroid.html">asteroid</a> in the outer <a href="asteroid-belt.html">asteroid belt</a>.
-                        It is named after the Roman goddess of erotic love and is among the largest and most massive asteroids.
+                        It was discoered in 1852 and is named after the Roman goddess of erotic love and is among the largest and most massive asteroids.
+                        Psyche is one of the largest asteroids, having a mean diameter greater than 200 km.
+                    </p>
+                    <p class="paragraph">
                         Psyche is an M-type asteroid and is of interest for its potentially metal-rich surface.
                         For that reason, NASA has sent a probe to study the asteroid.
                     </p>
