--- a/pages/torifune.html
+++ b/pages/torifune.html
@@ -16,7 +16,7 @@ link: torifune
                 </p>
                 <h2 class="paragraphheader" id="Name">Name</h2>
                 <p class="paragraph">
-                    Torifune, meaning "bird ship" is named after Ame-no-torifune, a deity and its ship that is fast as a flying bird.
+                    Torifune, meaning "bird ship" is named after Ame-no-torifune, a Japanese deity and its ship that is fast as a flying bird.
                     This name was selected as a part of a public naming campaign.
                     The name refers to the upcoming fast flyby of the asteroid, similar to the mythological ship.
                 </p>
